WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49970
Fix minor errors in IndexedDB
https://bugs.webkit.org/show_bug.cgi?id=49970
Summary
Fix minor errors in IndexedDB
Jeremy Orlow
Reported
2010-11-23 06:11:17 PST
Fix minor errors in IndexedDB
Attachments
Patch
(11.38 KB, patch)
2010-11-23 06:22 PST
,
Jeremy Orlow
steveblock
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Orlow
Comment 1
2010-11-23 06:22:29 PST
Created
attachment 74656
[details]
Patch
Jeremy Orlow
Comment 2
2010-11-23 06:23:05 PST
Here's an easy one.
Hans Wennborg
Comment 3
2010-11-23 06:28:28 PST
(In reply to
comment #1
)
> Created an attachment (id=74656) [details] > Patch
Looks good. I like the test.
Andrei Popescu
Comment 4
2010-11-23 06:53:24 PST
> function testCreateAndRemove() > function openSuccess()
I think these two functions should be defined in the opposite order in the layout test file. Other than that, LGTM.
Steve Block
Comment 5
2010-11-24 09:14:56 PST
Comment on
attachment 74656
[details]
Patch I agree with Andrei's comment about re-ordering.
Jeremy Orlow
Comment 6
2010-11-24 09:57:50 PST
Committed
r72682
: <
http://trac.webkit.org/changeset/72682
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug