2010-11-23  Jeremy Orlow  <jorlow@chromium.org>

Reviewed by Steve Block.

        Fix minor errors in IndexedDB
        https://bugs.webkit.org/show_bug.cgi?id=49970

        * storage/indexeddb/constants-expected.txt:
        * storage/indexeddb/constants.html:
        * storage/indexeddb/createAndRemoveObjectStore-expected.txt: Added.
        * storage/indexeddb/createAndRemoveObjectStore.html: Added.
2010-11-23  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Steve Block.

        Fix minor errors in IndexedDB
        https://bugs.webkit.org/show_bug.cgi?id=49970

        * Remove SNAPSHOT_READ per spec.
        * Assert that the transaction that changes the db is a setVersion
          transaction.
        * When an objectStore already exists, throw a CONSTRAINT_ERR.
        * When not in a setVersion transaction, throw a NOT_ALLOWED_ERR.

        Test: storage/indexeddb/createAndRemoveObjectStore.html

        * storage/IDBDatabase.cpp:
        (WebCore::IDBDatabase::createObjectStore):
        * storage/IDBDatabaseBackendImpl.cpp:
        (WebCore::IDBDatabaseBackendImpl::createObjectStore):
        * storage/IDBTransaction.h:
        * storage/IDBTransaction.idl:

Canonical link: https://commits.webkit.org/63143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72682 268f45cc-cd09-0410-ab3c-d52691b4dbfc