WebCore/storage/IDBDatabaseBackendImpl.cpp
@@ -138,8 +138,10 @@ PassRefPtr<DOMStringList> IDBDatabaseBackendImpl::objectStores() const
 
 PassRefPtr<IDBObjectStoreBackendInterface>  IDBDatabaseBackendImpl::createObjectStore(const String& name, const String& keyPath, bool autoIncrement, IDBTransactionBackendInterface* transactionPtr, ExceptionCode& ec)
 {
+    ASSERT(transactionPtr->mode() == IDBTransaction::VERSION_CHANGE);
+
     if (m_objectStores.contains(name)) {
-        // FIXME: Throw CONSTRAINT_ERR in this case.
+        ec = IDBDatabaseException::CONSTRAINT_ERR;
         return 0;
     }
 
@@ -150,6 +152,7 @@ PassRefPtr<IDBObjectStoreBackendInterface>  IDBDatabaseBackendImpl::createObject
     RefPtr<IDBTransactionBackendInterface> transaction = transactionPtr;
     if (!transaction->scheduleTask(createCallbackTask(&IDBDatabaseBackendImpl::createObjectStoreInternal, database, objectStore, transaction),
                                    createCallbackTask(&IDBDatabaseBackendImpl::removeObjectStoreFromMap, database, objectStore))) {
+        ec = IDBDatabaseException::NOT_ALLOWED_ERR;
         return 0;
     }
 
